# ex02

./: CMakeLists.txt  README.md  main.cpp  maintest.sh
include/: AbstractAlgorithm.hpp  AlgorithmFactory.hpp  BatteryMeter.hpp  CleaningRecord.hpp  CleaningRecordStep.hpp  Coordinate.hpp  Direction.hpp  DirtSensor.hpp  House.hpp  HouseLocation.hpp  Logger.hpp  MeteredVacuumBattery.hpp  OutFileWriter.hpp  PlacedHouse.hpp  Simulator.hpp  Step.hpp  VacuumHouse.hpp  VacuumParser.hpp  VacuumPayload.hpp  VacuumSimulator.hpp  WallsSensor.hpp
include/MappingAlgorithm/: HouseLocationMapping.hpp  MappingAlgorithm.hpp  MappingGraph.hpp
src/: CleaningRecord.cpp  CleaningRecordStep.cpp  Coordinate.cpp  HouseLocation.cpp  MeteredVacuumBattery.cpp  OutFileWriter.cpp  VacuumHouse.cpp  VacuumParser.cpp  VacuumSimulator.cpp
src/MappingAlgorithm/: MappingAlgorithm.cpp  MappingGraph.cpp
test/: CleaningRecordTest.cpp  HouseLocationTest.cpp  MappingAlgorithmTest.cpp  MeteredVacuumBatteryTest.cpp  OutFileWriterTest.cpp  VacuumHouseTest.cpp  VacuumParserTest.cpp
test/examples/cleaningTest/: house-big-1.txt  house-big.txt  house-coridors.txt  house-empty-rows-counted-as-corridors.txt  house-maxsteps.txt  house-narrow.txt  house-partial.txt  house-return-small-battery2.txt  house-sparse.txt  house-sparse2.txt  house.txt
test/examples/failtests/: house-empty.txt  house-improperStartRows.txt  house-improperStartRows2.txt  house-improperStartRows3.txt  house-improperStartRows4.txt  house-improperStartRows5.txt  house-invalidchars.txt  house-noCharging.txt  house-tooManyCharging.txt
test/examples/futileTest/: house-closedin.txt  house-closedin2.txt  house-line.txt  house-max0.txt  house-minvalid.txt  house-nodirt.txt  house-return-small-battery.txt
test/examples/mappingTest/: house-bigEmpty-allFoundButSomeUndiscoverable.txt  house-bigEmpty-someUnmappable.txt  house-bigEmpty.txt  house-linemappable-not-cleanable.txt
